--- a/style.css
+++ b/style.css
@@ -1,36 +1,43 @@
 * {
   box-sizing: border-box;
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Hind', sans-serif;
+  font-weight: 300;
 }
 
 body {
-  background-color: #767F7F;
+  height: 100vh;
+  padding: 50px;
+  padding-top: 80px;
+  background-image: url('https://farm8.staticflickr.com/7346/11246836254_68d5f2ddc7_o.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 h1 {
-  margin-top: 80px;
-  padding-right: 10px;
+  margin-top: 0;
+  margin-bottom: 30px;
+  color: rgba(210, 275, 254, 0.5);
+  font-size: 80px;
   text-align: center;
-  color: #EDFFFE;
-  font-size: 60px;
 }
 
 main {
-  margin-top: 100px;
   display: flex;
   justify-content: center;
+  margin-top: 25px;
 }
 
 input {
   height: 50px;
-  padding-left: 10px;
+  padding-left: 15px;
   width: 50%;
   border: none;
   border-radius: 5px 0 0 0px;
-  box-shadow: 0.5px 0.5px 0.5px #EDFFFE;
   color: #507F7D;
-  font-size: 20px;
+  font-size: 18px;
+  opacity: 0.6;
+  outline: none;
 }
 
 input:focus {
@@ -43,9 +50,11 @@ input:focus {
   background-color: #507F7D;
   border: none;
   border-radius: 0 5px 0 0;
-  box-shadow: 0.5px 0.5px 0.5px #EDFFFE;
   color: #EDFFFE;
-  font-size: 30px;
+  font-size: 22px;
+  font-weight: 400;
+  letter-spacing: 1.05px;
+  opacity: 0.6;
 }
 
 button:focus {
@@ -55,6 +64,7 @@ button:focus {
 .submit-btn:hover {
   background-color: rgba(160, 255, 250, 0.5);
   color: #FFFFFF;
+  cursor: pointer;
 }
 
 div {
@@ -62,38 +72,31 @@ div {
   justify-content: flex-start;
   margin-left: 15%;
   width: 70%;
-  background-color: #FFFFFF;
-  border-top: 3px solid #EDFFFE;
+  background-color: rgba(255, 255, 255, 0.5);
   border-radius: 0 0 5px 5px;
-  box-shadow: 0.5px 0.5px 0.5px #EDFFFE;
   color: #767F7F;
 }
 
 ul {
-  padding: 10px 10px 5px 10px;
+  padding: 0 10px;
   width: 100%;
   list-style-type: none;
 }
 
 li {
+  padding-left: 5px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 5px;
+  margin: 5px 0;
   width: 100%;
+  color: rgba(0, 0, 0, 0.5);
 }
 
 li:hover {
   background-color: rgba(118, 127, 127, 0.1);
-}
-
-.remove-btn {
-  background: none;
-  border: none;
-  color: #507F7D;
-  font-size: 15px;
-}
-
-.remove-btn:hover {
+  border-radius: 3px;
   color: rgba(0, 0, 0, 0.8);
+  cursor: pointer;
+  font-size: 17px;
 }
